# ai-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  prompt.rs
src/core/: generate_text.rs  language_model.rs  mod.rs  types.rs
src/providers/: mod.rs
src/providers/openai/: client.rs  mod.rs  settings.rs
tests/: openai_provider_integration_tests.rs
