[package]
name = "ai-sdk-rs"
version = "0.1.0"
edition = "2024"

[features]
full = ["openai"]
openai = []

[[test]]
name = "openai_provider_integration_tests"
required-features = ["openai"]

[dependencies]
tera = "1"
once_cell = "1.19.0"
log = "0.4"
async-trait = "0.1.88"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0" }
thiserror = "2.0.12"
derive_builder = "0.20.2"
reqwest = { version = "0.12.5", features = ["json"] }

[dev-dependencies]
tempfile = "3.10.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"]}
